--- a/MWDGame/Assembly-CSharp.csproj
+++ b/MWDGame/Assembly-CSharp.csproj
@@ -62,9 +62,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\RelicEffectBase.cs" />
     <Compile Include="Assets\Scripts\Block.cs" />
+    <Compile Include="Assets\Scripts\PlayerInventory.cs" />
     <Compile Include="Assets\Scripts\GridManager.cs" />
     <Compile Include="Assets\Scripts\RelicMono.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\ResourceManager.cs" />
     <Compile Include="Assets\Scripts\Shovel.cs" />
     <Compile Include="Assets\Scripts\SplitScreenManager.cs" />
     <Compile Include="Assets\Scripts\SO\RelicDetails.cs" />
