--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ MWDGame/Logs/shadercompiler-UnityShaderCompiler.exe8.log
 MWDGame/Logs/shadercompiler-UnityShaderCompiler.exe9.log
 MWDGame/MWDGame.sln
 MWDGame/UserSettings/EditorUserSettings.asset
+MWDGame/UserSettings/Layouts/default-2022.dwlt
