--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ MWDGame/Logs/shadercompiler-UnityShaderCompiler.exe9.log
 MWDGame/MWDGame.sln
 MWDGame/UserSettings/EditorUserSettings.asset
 MWDGame/UserSettings/Layouts/default-2022.dwlt
+MWDGame/Assets/Fonts/FZZJ-WHHLTJW SDF.asset
